sna: Fix computation of st values for SIMD8 dispatch

Fixes regression with enabling 8-pixels.

Reported-by: Mehran Kholdi <semekh.dev@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53044
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>